# CS3820-Problem-6

./: .devcontainer.json  Problem6.cabal  Problem6.hs  Tests.hs
